Non-paintsContent fixed position layer should not cause slow scrolling https://bugs.webkit.org/show_bug.cgi?id=113238

Reviewed by James Robinson.

Source/WebCore:

Added NotCompositedForNoVisibleContent in ViewportConstrainedNotCompositedReason and set it in RLC.

Test: compositing/layer-creation/fixed-position-no-content-scroll-reason.html

* rendering/RenderLayer.h: Add NotCompositedForNoVisibleContent.
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::requiresCompositingForPosition): Set NotCompositedForNoVisibleContent reason when the fixed position layer has no visible content.

LayoutTests:

* compositing/layer-creation/fixed-position-no-content-scroll-reason-expected.txt: Added.
* compositing/layer-creation/fixed-position-no-content-scroll-reason.html: Copied from LayoutTests/compositing/layer-creation/fixed-position-out-of-view-scroll-reason.html. Test case for the bug.
* compositing/layer-creation/fixed-position-in-view-dynamic.html: Set background of fixed layer to distinguish out-of-view case from no-content case.
* compositing/layer-creation/fixed-position-out-of-view-dynamic.html: Ditto.
* compositing/layer-creation/fixed-position-out-of-view-scroll-reason.html: Ditto.
* platform/chromium/compositing/layer-creation/fixed-position-in-view-dynamic-expected.txt: Removed. This was a wrong rebaseline related to this bug.
* platform/chromium/platform/chromium/virtual/softwarecompositing/layer-creation/fixed-position-in-view-dynamic-expected.txt: Removed. This was a wrong rebaseline related to this bug.


Canonical link: https://commits.webkit.org/131686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146940 268f45cc-cd09-0410-ab3c-d52691b4dbfc